--- a/css/dentist-doc1.css
+++ b/css/dentist-doc1.css
@@ -5,19 +5,19 @@
     scroll-behavior: smooth;
 }
 
-.content {
+.container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
 }
 
-.doc-card {
+.blue-background {
     background-color: rgb(12, 99, 170);
     width: 90%;
-    height: 100vh;
+    min-height: 100vh;
     margin-top: 30px;
-    box-shadow: 0 5px 20px rgba(1 1 1 / 50%);
+    box-shadow: 0 3px 20px rgba(1 1 1 / 75%);
     text-align: center;
     padding: 20px;
     border-radius: 70px;
@@ -115,3 +115,68 @@
     line-height: 1.6;
 }
 
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.doc-card {
+    background-color: aliceblue;
+    width: 21.25em;
+    margin-top: 30px;
+    margin-right: 25px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 30px;
+    box-shadow: 0 3px 10px rgba(1 1 1 / 50%);
+}
+
+.doc-card:hover {
+    transform: scale(1.1);
+    transition: .5s ease;
+}
+
+.doc-card-icon {
+    color: rgb(12, 99, 170);
+    font-size: 7.5em;
+    padding-top: 20px;
+}
+
+.doc-card-info h3 {
+    color: rgb(12, 99, 170);
+    font-size: 35px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.doc-card-info p {
+    font-size: 20px;
+    line-height: 1.3;
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+.doc-card-info .clinic-name {
+    color: rgb(12, 99, 170);
+    font-size: 35px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.book-btn {
+    text-decoration: none;
+    background-color:rgb(12, 99, 170) ;
+    color: aliceblue;
+    padding: 10px;  
+    border-radius: 15px;
+    display: inline-block;
+    font-size: 2em;
+    margin: -5px;
+}
+
+.doc-card-info a:hover {
+    transform: scale(1.1);
+    transition: .5s ease;
+}
