--- a/css/dentist-doc1.css
+++ b/css/dentist-doc1.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -88,10 +89,10 @@
     color: #F3F9FB;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
-.about span {
+.doc-name {
     font-weight: bold;
     font-size: 30px;
 }
@@ -110,9 +111,10 @@
     text-align: center;
     margin-top: 20px;
     color: #F3F9FB;
-    font-size: 30px;
+    font-size: 25px;
     width: 75%;
     line-height: 1.6;
+    opacity: .95;
 }
 
 .content {
@@ -150,13 +152,13 @@
 
 .doc-card-icon {
     color: #226597;
-    font-size: 7.5em;
+    font-size: 7em;
     padding-top: 20px;
 }
 
 .doc-card-info h3 {
     color: #226597;
-    font-size: 35px;
+    font-size: 30px;
     margin-top: 10px;
     margin-bottom: 15px;
 }
@@ -164,13 +166,12 @@
 .doc-card-info p {
     font-size: 20px;
     line-height: 1.3;
-    margin-top: 5px;
-    margin-bottom: 15px;
+    margin: 5px 5px 20px;
 }
 
 .doc-card-info .clinic-name {
     color: #226597;
-    font-size: 35px;
+    font-size: 30px;
     margin-top: 10px;
     margin-bottom: 15px;
 }
@@ -182,7 +183,7 @@
     padding: 10px;  
     border-radius: 15px;
     display: inline-block;
-    font-size: 2em;
+    font-size: 1.5em;
     margin: -5px;
 }
 
