--- a/css/dentist-doc1.css
+++ b/css/dentist-doc1.css
@@ -17,7 +17,7 @@
     background-color: #226597;
     width: 90%;
     min-height: 100vh;
-    margin-top: 30px;
+    margin: 30px 0 30px;
     box-shadow: 0 3px 20px rgba(1 1 1 / 75%);
     text-align: center;
     padding: 20px;
@@ -94,7 +94,6 @@
 .hr2 {
     border: none;
     height: 4px;
-    /* background-color: #F3F9FB;    */
     background: linear-gradient(to right, transparent, #F3F9FB, transparent);
     margin: 20px auto 0;
     width: 50%;
@@ -122,7 +121,7 @@
 .doc-card {
     background-color: #F3F9FB;
     width: 21.25em;
-    margin-top: 30px;
+    margin: 30px 25px 20px;
     margin-right: 25px;
     padding: 10px;
     margin-bottom: 20px;
@@ -186,4 +185,70 @@
 .doc-card-info a:hover {
     transform: scale(1.1);
     transition: .5s ease;
+}
+
+.review-title h2 {
+    color: #F3F9FB;
+    font-size: 30px;
+    margin: 15px;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+
+.review-box {
+    display: inline-block;
+    justify-content: center;
+    background-color: #F3F9FB;
+    width: 70em;
+    min-height: 50em;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 30px;
+    box-shadow: 0 3px 10px rgba(1 1 1 / 50%);
+}
+
+.comment-box {
+    display: inline-block;
+    justify-content: center;
+    background-color: #F3F9FB;
+    width: 60em;
+    margin: 25px 20px 25px;
+    min-height: 5em;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 0 3px 10px rgba(1 1 1 / 50%);
+}
+
+.comment-box:hover {
+    transform: translateY(-10px);
+    transition: .5s ease;
+}
+
+.comment-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.comment {
+    padding: 20px;
+}
+
+.comment h2 {
+    color: #113F67;
+    display: flex;
+    margin: 0 20px;
+    font-size: 25px;
+}
+
+.comment p {
+    display: flex;
+    justify-content: left;
+    margin: 5px 25px;
+    font-size: 20px;
+}
+
+.stars img {
+    width: 250px;
+    height: 70px;
+    margin: 15px 20px 0 0;
 }
