--- a/css/dentist-doc1.css
+++ b/css/dentist-doc1.css
@@ -7,6 +7,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body , html{
+    overflow-x: hidden;
+}
+
 .container {
     display: flex;
     justify-content: center;
