fixed syntanx error

--- a/css/header.css
+++ b/css/header.css
@@ -19,7 +19,7 @@ body {
     top: 0;
     width: 100%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: background 0.5s ease;
+    transition: background-color 0.5s ease;
 }
 
 .right-links {
