--- a/css/Registration.css
+++ b/css/Registration.css
@@ -144,3 +144,45 @@ body:has(.switch input:checked) .container{
 .popup button:hover {
     background-color: #45a049;
 }
+
+.matching-passwords {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.passwords-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+}
+
+.matching-passwords h3 {
+    margin-bottom: 10px;
+}
+
+.matching-passwords p {
+    margin-bottom: 20px;
+}
+
+.matching-passwords button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.matching-passwords button:hover {
+    background-color: #45a049;
+}
