--- a/css/login.css
+++ b/css/login.css
@@ -1,15 +1,14 @@
-body {
+body , html {
     margin: 0;
     padding: 0;
     background: linear-gradient(to bottom, #84c9f1, #ffffff); 
     font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    height: 100%;
   }
   
   .login-container {
+    margin-top: 50px;
+    margin: 150px auto 0 auto;
     background: whitesmoke;
     padding: 40px;
     border-radius: 15px;
