--- a/css/contact.css
+++ b/css/contact.css
@@ -33,7 +33,7 @@ body {
     margin: auto;
     margin-top: 50px;
     padding: 20px;
-    height: 100%;
+    height: 770px;
     box-shadow: 0 4px 12px #858585;
     border-radius: 10px;
 }
@@ -49,6 +49,7 @@ body {
     color: #003a8b;
     font-weight: 800;
 }
+
 input {
     display: block;
     width: 100%;
@@ -76,6 +77,7 @@ textarea {
 
 .contact-send-button {
     margin-left: 20px;
+    margin-top: 10px ;
     padding: 5px;
     border: none;
     border-radius: 2px;
@@ -111,3 +113,41 @@ textarea {
 .info-container :placeholder-shown {
     padding-left: 10px;
 }
+
+/* footer css */
+.footer {
+    height: 6%;
+    background-color: #4e9fcf;   
+    color: white;
+    text-align: center;
+    padding: 5px 0;
+    width: 100%;
+    position: sticky;
+    bottom: 0;
+    left: 0; 
+    min-height: 30px;
+    font-size: 12px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .social-icons {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .social-icons a {
+    color: white;
+    font-size: larger;
+    transition: 0.3s;
+  }
+  
+  .social-icons a:hover {
+    color: #2c3e50;
+  }
+  
+  
+  
+  
