--- a/css/dentist-doc1.css
+++ b/css/dentist-doc1.css
@@ -12,6 +12,10 @@ html {
     overflow-x: hidden;
 }
 
+.header {
+    z-index: 999;
+}
+
 .container {
     display: flex;
     justify-content: center;
