--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,5 @@
 html,
 body {
-    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Inria Sans';
@@ -14,13 +13,13 @@ body {
 
 .header {
     background: linear-gradient(90deg, #4e9fcf, #4e9fcf);
-    height: 8%;
+    height: 70px;
     position: sticky;
     top: 0;
     width: 100%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: background-color 0.5s ease;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .right-links {
